2007-12-06	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug: external autogenerated file is ignored if source file is read-only and has translations in it
	* Added feature: display extension version in extension selector