@@ -2,3 +2,4 @@
 
 	* Fixed bug: external autogenerated file is ignored if source file is read-only and has translations in it
 	* Added feature: display extension version in extension selector
+	* External files now have priority over files in extension or local translations. This is required for proper translation process
